--- a/src/styles/user/BanksList.scss
+++ b/src/styles/user/BanksList.scss
@@ -1,7 +1,9 @@
 .banks-list {
-    display: flex;
-    flex-wrap: wrap;
+    // display: flex;
+    // flex-wrap: wrap;
     // justify-content: space-between;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
     padding: 40px;
     padding-bottom: 100px;
     position: relative;
@@ -13,14 +15,15 @@
     text-align: center;
 }
 
-.bank {
-    width: 23%;
+.bank,
+.bank-template {
     padding-top: 20px;
     border-radius: 8px;
     margin-bottom: 25px;
     margin-right: 25px;
     position: relative;
-    height: 350px;
+    min-height: 350px;
+    max-height: 400px;
     background-color: rgba(252, 252, 252, .89);
     box-shadow: 0 0 15px gray;
 }
@@ -92,20 +95,98 @@
     font-size: 1.3rem;
 }
 
-.bank-indicators__value {
+.bank-template__title {
+    text-align: center;
+    line-height: 0;
+    margin-bottom: 40px;
+}
+
+.bank-template__set-name-title {
+    text-align: center;
+    margin-bottom: 10px;
 
 }
 
 
+.bank-template__set-name {
+    width: 60%;
+    display: block;
+    margin: auto;
+    height: 40px;
+    font-size: 1.6rem;
+    padding: 0 10px;
+    border-radius: 8px;
+    border: 1px solid gray;
+
+}
+
+.bank-indicators__value {
+
+}
+
+.bank-template {
+    position: relative;
+}
+
+.bank-template__indicator-wrapper {
+    display: flex;
+    align-items: center;
+}
+
+.bank-template__set-indicator-value {
+    width: 120px;
+    height: 20px;
+    margin-right: 10px;
+
+}
+
+.template-bank__btn-wrapper {
+    position: absolute;
+    bottom: 10px;
+    right: 30px;
+
+}
+
+.template-bank__cancel-btn,
+.template-bank__save-btn {
+    width: 75px;
+    height: 35px;
+    border-radius: 4px;
+    transition: all .3s linear;
+    
+}
+
+.template-bank__save-btn {
+    margin-right: 10px;
+    background-color: #537b35;
+
+    &:hover {
+        box-shadow: 0 0 10px #537b35
+    }
+}
+
+.template-bank__cancel-btn {
+    background-color: #ce181e;
+    &:hover {
+        box-shadow: 0 0 10px #ce181e
+    }
+}
+
 
 
 .create-new-bank {
-    position: absolute;
-    bottom: 30px;
-    left: 50%;
+    position: fixed;
+    bottom: 100px;
+    right: 20px;
+    width: 100px;
+    height: 100px;
     transform: translateX(-50%);
     background-color: #537b35;
     color: #fff;
-    padding: 15px 50px;
-    border-radius: 8px;
+    border-radius: 50%;
+    font-size: 1rem;
+    box-shadow: 0 0 10px gray;
+    &:disabled {
+        opacity: .4;
+    }
 }
