--- a/src/styles/user/BanksList.scss
+++ b/src/styles/user/BanksList.scss
@@ -137,6 +137,9 @@
     width: 120px;
     height: 20px;
     margin-right: 10px;
+    border: none;
+    border-bottom: 1px solid #000;
+    background-color: transparent;
 
 }
 
