--- a/src/styles/bank/admin/admin.scss
+++ b/src/styles/bank/admin/admin.scss
@@ -60,6 +60,10 @@
 .bank-conditions__value {
 }
 
+.bank-conditions__value.bank-conditions__value_draft {
+    text-decoration: line-through;
+} 
+
 .bank-conditions__update-value-btn {
     background-color: transparent;
 }
