--- a/src/styles/bank/header/header.scss
+++ b/src/styles/bank/header/header.scss
@@ -4,6 +4,8 @@
     display: flex;
     justify-content: space-between;
     box-shadow: 0 0  10px #000;
+    background-color: #b4a996;
+    margin-bottom: 15px;
 }
 
 .header__app-logo {
