--- a/src/styles/common/common.scss
+++ b/src/styles/common/common.scss
@@ -32,7 +32,8 @@ body a {
 .container {
     width: 100%;
     margin: auto;
-    background-color: #8db9ca;
+    // background-color: #8db9ca;
+    background-color: #d7d7d8;
 
 }
 
